--- a/HW2_The_Perceptron.ipynb
+++ b/HW2_The_Perceptron.ipynb
@@ -2,119 +2,84 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vYiZq0X2oB5t"
+      },
       "source": [
         "# **CSCE 5218 / CSCE 4930 Deep Learning**\n",
         "\n",
         "# **HW1a The Perceptron** (20 pt)\n"
-      ],
-      "metadata": {
-        "id": "vYiZq0X2oB5t"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "source": [
-        "# Get the datasets\n",
-        "!wget http://huang.eng.unt.edu/CSCE-5218/test.dat\n",
-        "!wget http://huang.eng.unt.edu/CSCE-5218/train.dat\n"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2022-01-27 22:57:42--  http://www.cse.unt.edu/~blanco/csce5218/hw1a/train.dat\n",
-            "Resolving www.cse.unt.edu (www.cse.unt.edu)... 129.120.151.91\n",
-            "Connecting to www.cse.unt.edu (www.cse.unt.edu)|129.120.151.91|:80... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 11244 (11K) [application/x-ns-proxy-autoconfig]\n",
-            "Saving to: ‘train.dat’\n",
-            "\n",
-            "train.dat           100%[===================>]  10.98K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2022-01-27 22:57:42 (235 MB/s) - ‘train.dat’ saved [11244/11244]\n",
-            "\n",
-            "--2022-01-27 22:57:43--  http://www.cse.unt.edu/~blanco/csce5218/hw1a/test.dat\n",
-            "Resolving www.cse.unt.edu (www.cse.unt.edu)... 129.120.151.91\n",
-            "Connecting to www.cse.unt.edu (www.cse.unt.edu)|129.120.151.91|:80... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 2844 (2.8K) [application/x-ns-proxy-autoconfig]\n",
-            "Saving to: ‘test.dat’\n",
-            "\n",
-            "test.dat            100%[===================>]   2.78K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2022-01-27 22:57:43 (337 MB/s) - ‘test.dat’ saved [2844/2844]\n",
-            "\n"
-          ]
-        }
-      ],
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vGVmKzgG2Ium",
         "outputId": "4cc2ca21-861a-4fba-a38c-83e3ec04bec8"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "source": [
-        "# Take a peek at the datasets\n",
-        "!head train.dat\n",
-        "!head test.dat"
-      ],
+      },
       "outputs": [
         {
+          "name": "stderr",
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "A1\tA2\tA3\tA4\tA5\tA6\tA7\tA8\tA9\tA10\tA11\tA12\tA13\t\n",
-            "1\t1\t0\t0\t0\t0\t0\t0\t1\t1\t0\t0\t1\t0\n",
-            "0\t0\t1\t1\t0\t1\t1\t0\t0\t0\t0\t0\t1\t0\n",
-            "0\t1\t0\t1\t1\t0\t1\t0\t1\t1\t1\t0\t1\t1\n",
-            "0\t0\t1\t0\t0\t1\t0\t1\t0\t1\t1\t1\t1\t0\n",
-            "0\t1\t0\t0\t0\t0\t0\t1\t1\t1\t1\t1\t1\t0\n",
-            "0\t1\t1\t1\t0\t0\t0\t1\t0\t1\t1\t0\t1\t1\n",
-            "0\t1\t1\t0\t0\t0\t1\t0\t0\t0\t0\t0\t1\t0\n",
-            "0\t0\t0\t1\t1\t0\t1\t1\t1\t0\t0\t0\t1\t0\n",
-            "0\t0\t0\t0\t0\t0\t1\t0\t1\t0\t1\t0\t1\t0\n",
-            "A1\tA2\tA3\tA4\tA5\tA6\tA7\tA8\tA9\tA10\tA11\tA12\tA13\n",
-            "1\t1\t1\t1\t0\t0\t1\t1\t0\t0\t0\t1\t1\t0\n",
-            "0\t0\t0\t1\t0\t0\t1\t1\t0\t1\t0\t0\t1\t0\n",
-            "0\t1\t1\t1\t0\t1\t1\t1\t1\t0\t0\t0\t1\t0\n",
-            "0\t1\t1\t0\t1\t0\t1\t1\t1\t0\t1\t0\t1\t0\n",
-            "0\t1\t0\t0\t0\t1\t0\t1\t0\t1\t0\t0\t1\t0\n",
-            "0\t1\t1\t0\t0\t1\t1\t1\t1\t1\t1\t0\t1\t0\n",
-            "0\t1\t1\t1\t0\t0\t1\t1\t0\t0\t0\t1\t1\t0\n",
-            "0\t1\t0\t0\t1\t0\t0\t1\t1\t0\t1\t1\t1\t0\n",
-            "1\t1\t1\t1\t0\t0\t1\t1\t0\t0\t0\t0\t1\t0\n"
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "\n",
+            "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+            "100 11244  100 11244    0     0  92294      0 --:--:-- --:--:-- --:--:-- 92925\n",
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "\n",
+            "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+            "100  2844  100  2844    0     0  48601      0 --:--:-- --:--:-- --:--:-- 49034\n"
           ]
         }
       ],
+      "source": [
+        "# Get the datasets\n",
+        "!curl.exe --output train.dat http://huang.eng.unt.edu/CSCE-5218/train.dat\n",
+        "!curl.exe --output test.dat http://huang.eng.unt.edu/CSCE-5218/test.dat\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "A69DxPSc8vNs",
         "outputId": "5440e602-8ecd-44cf-d48d-2e8b00cdcc52"
-      }
+      },
+      "outputs": [],
+      "source": [
+        "# Take a peek at the datasets\n",
+        "!head train.dat\n",
+        "!head test.dat"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rFXHLhnhwiBR"
+      },
       "source": [
         "### Build the Perceptron Model\n",
         "\n",
         "You will need to complete some of the function definitions below.  DO NOT import any other libraries to complete this. "
-      ],
-      "metadata": {
-        "id": "rFXHLhnhwiBR"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
+      "metadata": {
+        "id": "cXAsP_lw3QwJ"
+      },
+      "outputs": [],
       "source": [
         "import math\n",
         "import itertools\n",
@@ -197,24 +162,37 @@
         "                weights[i] += lr * error * output * (1-output) * instance[i]\n",
         "\n",
         "    return weights"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "cXAsP_lw3QwJ"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Run it"
-      ],
       "metadata": {
         "id": "adBZuMlAwiBT"
-      }
+      },
+      "source": [
+        "## Run it"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
+      "metadata": {
+        "id": "50YvUza-BYQF"
+      },
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "unsupported operand type(s) for -: 'int' and 'NotImplementedType'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[25], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m lr \u001b[39m=\u001b[39m \u001b[39m0.005\u001b[39m\n\u001b[0;32m      4\u001b[0m epochs \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m\n\u001b[1;32m----> 5\u001b[0m weights \u001b[39m=\u001b[39m train_perceptron(instances_tr, lr, epochs)\n\u001b[0;32m      6\u001b[0m accuracy \u001b[39m=\u001b[39m get_accuracy(weights, instances_te)\n\u001b[0;32m      7\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m#tr: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(instances_tr)\u001b[39m:\u001b[39;00m\u001b[39m3\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, epochs: \u001b[39m\u001b[39m{\u001b[39;00mepochs\u001b[39m:\u001b[39;00m\u001b[39m3\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, learning rate: \u001b[39m\u001b[39m{\u001b[39;00mlr\u001b[39m:\u001b[39;00m\u001b[39m.3f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m; \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      8\u001b[0m       \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAccuracy (test, \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(instances_te)\u001b[39m}\u001b[39;00m\u001b[39m instances): \u001b[39m\u001b[39m{\u001b[39;00maccuracy\u001b[39m:\u001b[39;00m\u001b[39m.1f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+            "Cell \u001b[1;32mIn[24], line 76\u001b[0m, in \u001b[0;36mtrain_perceptron\u001b[1;34m(instances, lr, epochs)\u001b[0m\n\u001b[0;32m     74\u001b[0m in_value \u001b[39m=\u001b[39m dot_product(weights, instance)\n\u001b[0;32m     75\u001b[0m output \u001b[39m=\u001b[39m sigmoid(in_value)\n\u001b[1;32m---> 76\u001b[0m error \u001b[39m=\u001b[39m instance[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m] \u001b[39m-\u001b[39;49m output\n\u001b[0;32m     77\u001b[0m \u001b[39m#TODO: name these steps\u001b[39;00m\n\u001b[0;32m     78\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39mlen\u001b[39m(weights)):\n",
+            "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'int' and 'NotImplementedType'"
+          ]
+        }
+      ],
       "source": [
         "instances_tr = read_data(\"train.dat\")\n",
         "instances_te = read_data(\"test.dat\")\n",
@@ -224,25 +202,24 @@
         "accuracy = get_accuracy(weights, instances_te)\n",
         "print(f\"#tr: {len(instances_tr):3}, epochs: {epochs:3}, learning rate: {lr:.3f}; \"\n",
         "      f\"Accuracy (test, {len(instances_te)} instances): {accuracy:.1f}\")"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "50YvUza-BYQF"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CBXkvaiQMohX"
+      },
       "source": [
         "## Questions\n",
         "\n",
         "Answer the following questions. Include your implementation and the output for each question."
-      ],
-      "metadata": {
-        "id": "CBXkvaiQMohX"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YCQ6BEk1CBlr"
+      },
       "source": [
         "\n",
         "\n",
@@ -264,13 +241,13 @@
         "#### TODO Add your answer here (text only)\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "YCQ6BEk1CBlr"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "JU3c3m6YL2rK"
+      },
       "source": [
         "### Question 2\n",
         "Train the perceptron with the following hyperparameters and calculate the accuracy with the test dataset.\n",
@@ -292,14 +269,15 @@
         "You will get different results with different hyperparameters.\n",
         "\n",
         "#### TODO Add your answer here (code and output in the format above) \n"
-      ],
-      "metadata": {
-        "id": "JU3c3m6YL2rK"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "G-VKJOUu2BTp"
+      },
+      "outputs": [],
       "source": [
         "instances_tr = read_data(\"train.dat\")\n",
         "instances_te = read_data(\"test.dat\")\n",
@@ -316,14 +294,13 @@
         "      accuracy = get_accuracy(weights, instances_te)\n",
         "    print(f\"#tr: {len(pre_instances):0}, epochs: {epochs:3}, learning rate: {lr:.3f}; \"\n",
         "            f\"Accuracy (test, {len(instances_te)} instances): {accuracy:.1f}\")"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "G-VKJOUu2BTp"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "OFB9MtwML24O"
+      },
       "source": [
         "### Question 3\n",
         "Write a couple paragraphs interpreting the results with all the combinations of hyperparameters. Drawing a plot will probably help you make a point. In particular, answer the following:\n",
@@ -338,17 +315,14 @@
         "\n",
         "#### TODO: Add your answer here (code and text)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "OFB9MtwML24O"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "38rA_Kp3wiBX"
-      }
+      },
+      "source": []
     }
   ],
   "metadata": {
