--- a/HW2_The_Perceptron.ipynb
+++ b/HW2_The_Perceptron.ipynb
@@ -789,7 +789,7 @@
         "You will get different results with different hyperparameters.\n",
         "\n",
         "#### TODO Add your answer here (code and output in the format above) \n",
-        "import random\n",
+        "```import random\n",
         "\n",
         "tr_percent = [5, 10, 25, 50, 75, 100]\n",
         "num_epochs = [5, 10, 20, 50, 100]\n",
@@ -806,17 +806,58 @@
         "            accuracy = get_accuracy(weights, instances_te)\n",
         "            print(f\"# tr: {num_instances:3}, epochs: {e:3}, learning rate: {l:.3f}; \"\n",
         "                  f\"Accuracy (test, {len(instances_te)} instances): {accuracy:.1f}\")\n",
+        "```\n",
         "\n",
-        "\n"
+        "OUTPUT\n",
+        "```\n",
+        "# tr:   9, epochs:   5, learning rate: 0.005; Accuracy (test, 100 instances): 68.0\n",
+        "# tr:   9, epochs:   5, learning rate: 0.010; Accuracy (test, 100 instances): 68.0\n",
+        "# tr:   9, epochs:   5, learning rate: 0.050; Accuracy (test, 100 instances): 68.0\n",
+        "# tr:   9, epochs:  10, learning rate: 0.005; Accuracy (test, 100 instances): 68.0\n",
+        "# tr:   9, epochs:  10, learning rate: 0.010; Accuracy (test, 100 instances): 68.0\n",
+        "# tr:   9, epochs:  10, learning rate: 0.050; Accuracy (test, 100 instances): 68.0\n",
+        "# tr:   9, epochs:  20, learning rate: 0.005; Accuracy (test, 100 instances): 68.0\n",
+        "# tr:   9, epochs:  20, learning rate: 0.010; Accuracy (test, 100 instances): 68.0\n",
+        "# tr:   9, epochs:  20, learning rate: 0.050; Accuracy (test, 100 instances): 68.0\n",
+        "```\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "id": "G-VKJOUu2BTp"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Skipping instance A1\tA2\tA3\tA4\tA5\tA6\tA7\tA8\tA9\tA10\tA11\tA12\tA13\t\n",
+            " due to invalid input value.\n",
+            "Skipping instance A1\tA2\tA3\tA4\tA5\tA6\tA7\tA8\tA9\tA10\tA11\tA12\tA13\n",
+            " due to invalid input value.\n",
+            "#tr: 20, epochs: 100, learning rate: 0.005; Accuracy (test, 100 instances): 68.0\n",
+            "#tr: 40, epochs: 100, learning rate: 0.005; Accuracy (test, 100 instances): 68.0\n",
+            "#tr: 100, epochs: 100, learning rate: 0.005; Accuracy (test, 100 instances): 68.0\n",
+            "#tr: 200, epochs: 100, learning rate: 0.005; Accuracy (test, 100 instances): 74.0\n",
+            "#tr: 300, epochs: 100, learning rate: 0.005; Accuracy (test, 100 instances): 78.0\n",
+            "#tr: 400, epochs: 100, learning rate: 0.005; Accuracy (test, 100 instances): 77.0\n",
+            "#tr: 20, epochs: 100, learning rate: 0.010; Accuracy (test, 100 instances): 68.0\n",
+            "#tr: 40, epochs: 100, learning rate: 0.010; Accuracy (test, 100 instances): 68.0\n",
+            "#tr: 100, epochs: 100, learning rate: 0.010; Accuracy (test, 100 instances): 71.0\n",
+            "#tr: 200, epochs: 100, learning rate: 0.010; Accuracy (test, 100 instances): 78.0\n",
+            "#tr: 300, epochs: 100, learning rate: 0.010; Accuracy (test, 100 instances): 80.0\n",
+            "#tr: 400, epochs: 100, learning rate: 0.010; Accuracy (test, 100 instances): 80.0\n",
+            "#tr: 20, epochs: 100, learning rate: 0.050; Accuracy (test, 100 instances): 64.0\n",
+            "#tr: 40, epochs: 100, learning rate: 0.050; Accuracy (test, 100 instances): 69.0\n",
+            "#tr: 100, epochs: 100, learning rate: 0.050; Accuracy (test, 100 instances): 77.0\n",
+            "#tr: 200, epochs: 100, learning rate: 0.050; Accuracy (test, 100 instances): 76.0\n",
+            "#tr: 300, epochs: 100, learning rate: 0.050; Accuracy (test, 100 instances): 77.0\n",
+            "#tr: 400, epochs: 100, learning rate: 0.050; Accuracy (test, 100 instances): 80.0\n"
+          ]
+        }
+      ],
       "source": [
         "instances_tr = read_data(\"train.dat\")\n",
         "instances_te = read_data(\"test.dat\")\n",
@@ -836,6 +877,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "OFB9MtwML24O"
@@ -852,8 +894,14 @@
         "- C. Can you get higher accuracy with additional hyperparameters (higher than `80.0`)?\n",
         "- D. Is it always worth training for more epochs (while keeping all other hyperparameters fixed)?\n",
         "\n",
-        "#### TODO: Add your answer here (code and text)\n",
-        "\n"
+        "### TODO: Add your answer here (code and text)\n",
+        "A. To get the best accuracy with the test dataset, you do not necessarily need to train using the whole training dataset.The accuracy of the model will generally increase with the amount of training data you have, but there are some situations when adding more data may not enhance performance, particularly if the data is noisy or duplicated. The quantity of data and the amount of time and money needed to train the model are frequently trade-offs.In some cases, employing a smaller subset of the training data might aid in lowering overfitting and enhancing the model's capacity for generalization.\n",
+        "\n",
+        "B. Although utilizing more training data, the second run's accuracy was worse than the first run's, which might be explained by the possibility that the additional data contains noise or irrelevant characteristics that impair the perceptron's performance. A straightforward linear classifier known as a perceptron is sensitive to unrelated and correlated data, which can result in overfitting and subpar generalization. Consequently, increasing the amount of data does not necessarily result in improved performance, particularly when the data is erratic or redundant. In order to optimize the perceptron's performance, it is frequently helpful to preprocess the data by deleting pointless features, balancing the classes, or normalizing the inputs.\n",
+        "\n",
+        "C.By experimenting with various hyperparameters or employing more sophisticated models, it is feasible to get a greater accuracy. Because the dataset we are utilizing is hypothetical, we should be aware that it could not be an accurate representation of actual data. Also, we must take care to avoid overfitting the model to the training set of data because doing so might lead to worse performance on untried, fresh data. Thus, we should assess the final model on a test set that has not been used for training or validation and utilize a validation set to fine-tune the hyperparameters.\n",
+        "\n",
+        "D.No, it doesn't always make sense to train for additional epochs. While training for additional epochs might improve the model's performance, it also raises the possibility of overfitting, particularly when the dataset is limited. The model will cease improving and begin to overfit the training set of data after a predetermined number of epochs. To establish the ideal balance between training duration and model performance, it is frequently required to experiment with various numbers of epochs."
       ]
     },
     {
@@ -861,6 +909,11 @@
       "metadata": {
         "id": "38rA_Kp3wiBX"
       },
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
