--- a/HW2_The_Perceptron.ipynb
+++ b/HW2_The_Perceptron.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -926,6 +926,7 @@
     },
     "kernelspec": {
       "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -938,7 +939,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.8"
+      "version": "3.8.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "92084498eb2c167c4fa95cb4dc9ba7458445f38ebc7b1f249e569fd9401c7a58"
+      }
     }
   },
   "nbformat": 4,
