--- a/HW2_The_Perceptron.ipynb
+++ b/HW2_The_Perceptron.ipynb
@@ -901,6 +901,79 @@
         "\n",
         "C.By experimenting with various hyperparameters or employing more sophisticated models, it is feasible to get a greater accuracy. Because the dataset we are utilizing is hypothetical, we should be aware that it could not be an accurate representation of actual data. Also, we must take care to avoid overfitting the model to the training set of data because doing so might lead to worse performance on untried, fresh data. Thus, we should assess the final model on a test set that has not been used for training or validation and utilize a validation set to fine-tune the hyperparameters.\n",
         "\n",
+        "CODE\n",
+        "\n",
+        "import random\n",
+        "import re\n",
+        "from math import exp\n",
+        "\n",
+        "def read_data(file_name):\n",
+        "    with open(file_name, 'r') as f:\n",
+        "        instances = []\n",
+        "        for instance in f.readlines():\n",
+        "            if not re.search('\\t', instance): continue\n",
+        "            instance = list(map(int, instance.strip().split('\\t')))\n",
+        "            # Add a dummy input so that w0 becomes the bias\n",
+        "            instance = [-1] + instance \n",
+        "            instances.append(instance)\n",
+        "        return instances\n",
+        "\n",
+        "def dot_product(values, weights):\n",
+        "    return sum(value * weight for value, weight in zip(values, weights))\n",
+        "\n",
+        "def sigmoid(in_value):\n",
+        "    return 1 / (1 + exp(-in_value))\n",
+        "\n",
+        "def predict(weights, instance):\n",
+        "    in_value = dot_product(weights, instance)\n",
+        "    return sigmoid(in_value)\n",
+        "\n",
+        "def train_perceptron(instances, lr, epochs):\n",
+        "    # Initialize weights to zero\n",
+        "    weights = [0] * len(instances[0])\n",
+        "    \n",
+        "    for epoch in range(epochs):\n",
+        "        for instance in instances:\n",
+        "            output = predict(weights, instance)\n",
+        "            error = instance[-1] - output\n",
+        "            weights = [weight + lr * error * value for value, weight in zip(instance, weights)]\n",
+        "    return weights\n",
+        "\n",
+        "def test_perceptron(weights, instances):\n",
+        "    num_correct = 0\n",
+        "    for instance in instances:\n",
+        "        if predict(weights, instance) >= 0.5 and instance[-1] == 1:\n",
+        "            num_correct += 1\n",
+        "        elif predict(weights, instance) < 0.5 and instance[-1] == 0:\n",
+        "            num_correct += 1\n",
+        "    accuracy = num_correct / len(instances) * 100\n",
+        "    return accuracy\n",
+        "\n",
+        "tr_percent = [5, 10, 25, 50, 75, 100]\n",
+        "num_epochs = [5, 10, 20, 50, 100]\n",
+        "lr = [0.005, 0.01, 0.05]\n",
+        "\n",
+        "instances_tr = read_data(\"train.dat\")\n",
+        "instances_te = read_data(\"test.dat\")\n",
+        "\n",
+        "# Train and test with all hyperparameters\n",
+        "best_accuracy = 0\n",
+        "best_hyperparameters = None\n",
+        "\n",
+        "for tr in tr_percent:\n",
+        "    num_instances = int(len(instances_tr) * tr / 100)\n",
+        "    for epoch in num_epochs:\n",
+        "        for learning_rate in lr:\n",
+        "            train_set = random.sample(instances_tr, num_instances)\n",
+        "            weights = train_perceptron(train_set, learning_rate, epoch)\n",
+        "            test_accuracy = test_perceptron(weights, instances_te)\n",
+        "            if test_accuracy > best_accuracy:\n",
+        "                best_accuracy = test_accuracy\n",
+        "                best_hyperparameters = (tr, epoch, learning_rate)\n",
+        "\n",
+        "print(f\"Best hyperparameters: tr = {best_hyperparameters[0]}, epochs = {best_hyperparameters[1]}, lr = {best_hyperparameters[2]}\")\n",
+        "print(f\"Best accuracy: {best_accuracy:.1f}\")\n",
+        "\n",
         "D.No, it doesn't always make sense to train for additional epochs. While training for additional epochs might improve the model's performance, it also raises the possibility of overfitting, particularly when the dataset is limited. The model will cease improving and begin to overfit the training set of data after a predetermined number of epochs. To establish the ideal balance between training duration and model performance, it is frequently required to experiment with various numbers of epochs."
       ]
     },
